# SkillDrift

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile.api  Dockerfile.pipeline  README.md  SkillDrift_instr.md  api.py  app.js  aws_uploader.py  docker-compose.yml  index.html  indexer.py  ingest.py  migrate_to_neon.py  pyproject.toml  railway.json  requirements-dev.txt  requirements-pipeline.txt  requirements.txt  run_pipeline.ps1  run_pipeline.sh  simulate_history.py  spark.err.txt  spark.out.txt  styles.css  trend_engine.py  vercel.json
.github/workflows/: ci.yml  pipeline.yml
api/: __init__.py  index.py
dashboard/: index.html
data/: jobs.db  trends.db
deploy/solr/: Dockerfile  railway.json
public/: index.html
skilldrift/: __init__.py  api_app.py  config.py  db.py  ingestion.py  repository.py  schemas.py  search.py  simulation.py  skills.py  storage.py  trends.py
tests/: test_api.py  test_repository.py  test_simulation.py
