[project]
name = "skilldrift"
version = "1.0.0"
description = "Track changes in technology skill demand from job posting snapshots."
requires-python = ">=3.11,<3.13"
dependencies = [
  "boto3>=1.34,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic-settings>=2.6,<3",
  "psycopg[binary]>=3.2,<4",
  "requests>=2.32,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
pipeline = [
  "pandas>=2.2,<3",
  "pyarrow>=17,<20",
  "pysolr>=3.10,<4",
  "pyspark==3.5.5",
]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.8,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
